--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
+    "react-youtube": "^10.1.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
